// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ripple 基本测试 1`] = `
<div>
  click me
  <span
    class="xl-ripple"
  />
</div>
`;

exports[`Ripple 基本测试 2`] = `
<div>
  click me
  <span
    class="xl-ripple"
  >
    <div
      class="xl-ripple__inner ripple-enter ripple-enter-active"
      style="width: 3px; height: 3px; top: -1.5px; left: -1.5px;"
    />
  </span>
</div>
`;

exports[`Ripple 基本测试 3`] = `
<div>
  click me
  <span
    class="xl-ripple"
  >
    <div
      class="xl-ripple__inner ripple-leave ripple-leave-active"
      style="width: 3px; height: 3px; top: -1.5px; left: -1.5px;"
    />
  </span>
</div>
`;

exports[`Ripple 测试disableEvents 1`] = `
<div>
  click me
  <span
    class="xl-ripple"
  />
</div>
`;

exports[`Ripple 测试disableEvents 2`] = `
<div>
  click me
  <span
    class="xl-ripple"
  />
</div>
`;

exports[`Ripple 测试disableEvents 3`] = `
<div>
  click me
  <span
    class="xl-ripple"
  />
</div>
`;
